--- a/plugin.xml
+++ b/plugin.xml
@@ -22,12 +22,12 @@
            id="cordova-plugin-inappbrowser"
       version="5.0.1-dev">
 
-    <name>InAppBrowser</name>
-    <description>Cordova InAppBrowser Plugin</description>
+    <name>InAppBrowser Camera</name>
+    <description>Cordova InAppBrowser Plugin Camera</description>
     <license>Apache 2.0</license>
     <keywords>cordova,in,app,browser,inappbrowser</keywords>
-    <repo>https://github.com/apache/cordova-plugin-inappbrowser</repo>
-    <issue>https://github.com/apache/cordova-plugin-inappbrowser/issues</issue>
+    <repo>https://github.com/hpfranck/cordova-plugin-inappbrowser-camera</repo>
+    <issue>https://github.com/hpfranck/cordova-plugin-inappbrowser-camera/issues</issue>
 
     <engines>
         <engine name="cordova" version=">=9.0.0"/>
