--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cordova-plugin-inappbrowser-camera",
   "version": "5.0.1-dev",
-  "description": "Cordova InAppBrowser Plugin",
+  "description": "Cordova InAppBrowser Plugin Camera",
   "types": "./types/index.d.ts",
   "cordova": {
-    "id": "cordova-plugin-inappbrowser",
+    "id": "cordova-plugin-inappbrowser-camera",
     "platforms": [
       "android",
       "browser",
